# LagrangeCodec

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build-dynamic-lib.yml  build-static-lib.yml  build-zig-android-arm64.yml
docs/: android-arm64-kotlin-native.md
include/: logging.h  util.h
include/public/: common.h  video.h
scripts/: build_android_ffmpeg.sh  build_android_native_deps.sh  build_clean_android_zlib.sh  build_zig_android_deps.sh  stage_android_kotlin_native_bundle.sh  stage_zig_android_bundle.sh  verify_android_kotlin_native_bundle.sh
src/: audio.cpp  probe.cpp  silk.cpp  video.cpp
tests/: LagrangeCodecTests.cpp  android_runtime_smoke.cpp
vcpkg-overlay/ffmpeg/: 0024-android-avutil-log-no-stderr.patch  FindFFMPEG.cmake.in  build.sh.in  portfile.cmake
